--- a/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/templates/deployment.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/templates/deployment.yaml
@@ -25,8 +25,8 @@
   {{- end }}
 
 
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: {{ include ".Chart.Name .fullname" $ }}
   labels:
@@ -276,30 +276,12 @@ spec:
       {{- if and (eq (len .Values.volumes) 0) (eq (.Values.ConfigSecrets.enabled) false) (eq (.Values.ConfigMaps.enabled) false) (eq (.Values.appMetrics) false) }} []{{- end }}
 
   revisionHistoryLimit: 3
-##  pauseForSecondsBeforeSwitchActive: {{ $.Values.pauseForSecondsBeforeSwitchActive }}
-#  waitForSecondsBeforeScalingDown: {{ $.Values.waitForSecondsBeforeScalingDown }}
   strategy:
-    {{- if eq .Values.deploymentType "BLUE-GREEN" }}
-    blueGreen: # A new field that used to provide configurable options for a BlueGreenUpdate strategy
-      previewService: {{ template ".previewservicename" . }} # Reference to a service that can serve traffic to a new image before it receives the active traffic
-      activeService: {{ template ".servicename" . }} # Reference to a service that serves end-user traffic to the replica set
-      autoPromotionSeconds: {{ $.Values.deployment.strategy.blueGreen.autoPromotionSeconds  }}
-      scaleDownDelaySeconds: {{ $.Values.deployment.strategy.blueGreen.scaleDownDelaySeconds }}
-      previewReplicaCount: {{ $.Values.deployment.strategy.blueGreen.previewReplicaCount  }}
-      autoPromotionEnabled: {{ $.Values.deployment.strategy.blueGreen.autoPromotionEnabled  }}
-    {{- else if eq .Values.deploymentType "ROLLING" }}
-    canary:
-      stableService: {{ template ".servicename" . }} # Reference to a service that serves end-user traffic to the replica set
+    {{- if eq .Values.deploymentType "ROLLING" }}
+    type: RollingUpdate
+    rollingUpdate:
       maxSurge: {{ $.Values.deployment.strategy.rolling.maxSurge }}
       maxUnavailable: {{ $.Values.deployment.strategy.rolling.maxUnavailable }}
     {{- else if eq .Values.deploymentType "RECREATE" }}
-    recreate:
-      activeService: {{ template ".servicename" . }} # Reference to a service that serves end-user traffic to the replica set
-    {{- else if eq .Values.deploymentType "CANARY" }}
-    canary:
-      stableService: {{ template ".servicename" . }} # Reference to a service that serves end-user traffic to the replica set
-      maxSurge: {{ $.Values.deployment.strategy.canary.maxSurge }}
-      maxUnavailable: {{ $.Values.deployment.strategy.canary.maxUnavailable }}
-      steps:
-{{ toYaml .Values.deployment.strategy.canary.steps | indent 8 }}
+    type: Recreate
     {{- end }}
