--- a/manifests/charts/devtron/templates/devtron-installer.yaml
+++ b/manifests/charts/devtron/templates/devtron-installer.yaml
@@ -4,4 +4,4 @@ metadata:
   name: installer-devtron
   namespace: devtroncd
 spec:
-  url: https://raw.githubusercontent.com/devtron-labs/devtron-installation-script/main/installation-script
+  url: https://raw.githubusercontent.com/prakarsh-dt/devtron/v1.0.9/manifests/installation-script
