deployment template wizar view support by mapping

--- a/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/manifest-key-path-mapping.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/manifest-key-path-mapping.yaml
@@ -7,3 +7,8 @@ replicas: "fixed/autoscale"
 replicaCount: "1"
 livenessPath: "LivenessProbe.Path"
 readinessPath: "ReadinessProbe.Path"
+ingressAnnotation: ""
+ingressHost: ""
+ingressTls: ""
+serviceType: ""
+serviceAnnotation: ""
