--- a/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/templates/deployment.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/templates/deployment.yaml
@@ -224,10 +224,15 @@ spec:
           {{- if eq .type "volume"}}
           {{- $cmName := .name -}}
           {{- $cmMountPath := .mountPath -}}
+          {{- if eq .subPath true }}
+            - name: {{ $cmName }}-vol
+              mountPath: {{ $cmMountPath }}
+          {{- else }}
           {{- range $k, $v := .data }}
             - name: {{ $cmName }}-vol
               mountPath: {{ $cmMountPath }}/{{ $k}}
               subPath: {{ $k}}
+          {{- end }}
           {{- end }}
           {{- end }}
           {{- end }}
@@ -238,6 +243,17 @@ spec:
           {{- if eq .type "volume"}}
           {{- $cmName := .name -}}
           {{- $cmMountPath := .mountPath -}}
+          {{- if eq .subPath false }}
+            - name: {{ $cmName }}-vol
+              mountPath: {{ $cmMountPath }}
+          {{- else if (and (eq (.subPath) true) (eq (.externalType) "KubernetesSecret"))) }}
+          {{- else if (and (eq (.subPath) true) (eq (.external) true))) }}
+          {{- range .secretData }}
+            - name: {{.name}}-vol
+              mountPath: {{ $cmMountPath}}/{{ $k}}
+              subPath: {{ $k}}
+          {{- end }}
+          {{- else }}
           {{- range $k, $v := .data }}
             - name: {{ $cmName}}-vol
               mountPath: {{ $cmMountPath}}/{{ $k}}
@@ -268,7 +284,10 @@ spec:
             {{- else if eq .external false }}
             name: {{ .name}}-{{ $.Values.app }}
             {{- end }}
+            {{- if eq (len .Values.volumes) 0 }}
+            {{- else }}
             defaultMode: {{ .filePermission}}
+            {{- end }}
       {{- end }}
       {{- end }}
       {{- end }}
