--- a/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/templates/deployment.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-9-0/templates/deployment.yaml
@@ -224,7 +224,7 @@ spec:
           {{- if eq .type "volume"}}
           {{- $cmName := .name -}}
           {{- $cmMountPath := .mountPath -}}
-          {{- if eq .subPath true }}
+          {{- if eq .subPath false }}
             - name: {{ $cmName }}-vol
               mountPath: {{ $cmMountPath }}
           {{- else }}
@@ -246,18 +246,19 @@ spec:
           {{- if eq .subPath false }}
             - name: {{ $cmName }}-vol
               mountPath: {{ $cmMountPath }}
-          {{- else if (and (eq (.subPath) true) (eq (.externalType) "KubernetesSecret"))) }}
-          {{- else if (and (eq (.subPath) true) (eq (.external) true))) }}
+          {{- else if and (eq (.subPath) true) (eq (.externalType) "KubernetesSecret") }}
+          {{- else if and (eq (.subPath) true) (eq (.external) true) }}
           {{- range .secretData }}
-            - name: {{.name}}-vol
-              mountPath: {{ $cmMountPath}}/{{ $k}}
-              subPath: {{ $k}}
+            - name: {{ $cmName }}-vol
+              mountPath: {{ $cmMountPath}}/{{ .name }}
+              subPath: {{ .name }}
           {{- end }}
           {{- else }}
           {{- range $k, $v := .data }}
             - name: {{ $cmName}}-vol
               mountPath: {{ $cmMountPath}}/{{ $k}}
               subPath: {{ $k}}
+          {{- end }}
           {{- end }}
           {{- end }}
           {{- end }}
@@ -284,7 +285,7 @@ spec:
             {{- else if eq .external false }}
             name: {{ .name}}-{{ $.Values.app }}
             {{- end }}
-            {{- if eq (len .Values.volumes) 0 }}
+            {{- if eq (len .filePermission) 0 }}
             {{- else }}
             defaultMode: {{ .filePermission}}
             {{- end }}
@@ -302,7 +303,10 @@ spec:
             {{- else if eq .external false }}
             secretName: {{ .name}}-{{ $.Values.app }}
             {{- end }}
+            {{- if eq (len .filePermission) 0 }}
+            {{- else }}
             defaultMode: {{ .filePermission}}
+            {{- end }}
       {{- end }}
       {{- end }}
       {{- end }}
