Init container can reuse container image

--- a/scripts/devtron-reference-helm-charts/reference-chart_3-11-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-11-0/values.yaml
@@ -275,6 +275,7 @@ initContainers: []
   #  volumeMounts:
   #    - mountPath: /usr/local/airflow/logs
   #      name: logs-data
+  #  reuseContainerImage: true
 
 containers: []
   ## Additional init containers to run before the Scheduler pods.
