--- a/scripts/devtron-reference-helm-charts/reference-chart_3-11-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-11-0/values.yaml
@@ -275,6 +275,8 @@ initContainers: []
   #  volumeMounts:
   #    - mountPath: /usr/local/airflow/logs
   #      name: logs-data
+  ## Uncomment below line ONLY IF you want to reuse the container image.
+  ## This will assign your application's docker image to init container.
   #  reuseContainerImage: true
 
 containers: []
