--- a/manifests/yamls/migrator.yaml
+++ b/manifests/yamls/migrator.yaml
@@ -40,7 +40,7 @@ spec:
         - name: MIGRATE_TO_VERSION
           value: "0"
         - name: GIT_HASH
-          value: 
+          value: e6ee93cbb42388bf1ee05d8cff3bb7f7da83aa71
         envFrom:
           - secretRef:
               name: postgresql-migrator
