--- a/manifests/yamls/argocd.yaml
+++ b/manifests/yamls/argocd.yaml
@@ -2437,7 +2437,7 @@ spec:
       - command:
         - /shared/argocd-util
         - rundex
-        image: quay.io/dexidp/dex:v2.25.0
+        image: "quay.io/dexidp/dex:v2.25.0"
         imagePullPolicy: Always
         name: dex
         ports:
@@ -2453,7 +2453,7 @@ spec:
         - -n
         - /usr/local/bin/argocd-util
         - /shared
-        image: argoproj/argocd:v1.8.0
+        image: "quay.io/argoproj/argocd:v1.8.0"
         imagePullPolicy: Always
         name: copyutil
         volumeMounts:
@@ -2502,7 +2502,7 @@ spec:
         - ""
         - --appendonly
         - "no"
-        image: redis:5.0.10-alpine
+        image: "quay.io/k8slz/redis:5.0.10-alpine"
         imagePullPolicy: Always
         name: redis
         ports:
@@ -2553,7 +2553,7 @@ spec:
         - argocd-repo-server
         - --redis
         - argocd-redis:6379
-        image: argoproj/argocd:v1.8.0
+        image: "quay.io/argoproj/argocd:v1.8.0"
         imagePullPolicy: Always
         name: argocd-repo-server
         ports:
@@ -2623,7 +2623,7 @@ spec:
         - argocd-server
         - --staticassets
         - /shared/app
-        image: argoproj/argocd:v1.8.0
+        image: "quay.io/argoproj/argocd:v1.8.0"
         imagePullPolicy: Always
         name: argocd-server
         ports:
@@ -2692,7 +2692,7 @@ spec:
         - "20"
         - --operation-processors
         - "10"
-        image: argoproj/argocd:v1.8.0
+        image: quay.io/devtron/envoy:v1.14.1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
