--- a/manifests/yamls/argocd-1.8.1-prod.yaml
+++ b/manifests/yamls/argocd-1.8.1-prod.yaml
@@ -524,7 +524,7 @@ spec:
         - -n
         - /usr/local/bin/argocd-util
         - /shared
-        image: argoproj/argocd:v1.8.1
+        image: quay.io/quay.io/argoproj/argocd:v1.8.1
         imagePullPolicy: Always
         name: copyutil
         volumeMounts:
@@ -631,7 +631,7 @@ spec:
         - argocd-repo-server
         - --redis
         - argocd-redis:6379
-        image: argoproj/argocd:v1.8.1
+        image: quay.io/quay.io/argoproj/argocd:v1.8.1
         imagePullPolicy: Always
         name: argocd-repo-server
         resources:
@@ -708,7 +708,7 @@ spec:
         - argocd-server
         - --staticassets
         - /shared/app
-        image: argoproj/argocd:v1.8.1
+        image: quay.io/quay.io/argoproj/argocd:v1.8.1
         imagePullPolicy: Always
         name: argocd-server
         resources:
@@ -784,7 +784,7 @@ spec:
         - "20"
         - --operation-processors
         - "10"
-        image: argoproj/argocd:v1.8.1
+        image: quay.io/quay.io/argoproj/argocd:v1.8.1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
