--- a/manifests/yamls/minio-storage.yaml
+++ b/manifests/yamls/minio-storage.yaml
@@ -279,7 +279,7 @@ spec:
         fsGroup: 1000
       containers:
         - name: minio
-          image: quay.io/ricardbejarano/minio:RELEASE.2021-02-14T04-01-33Z
+          image: quay.io/devtron/minio:RELEASE.2021-02-14T04-01-33Z
           imagePullPolicy: IfNotPresent
 
           command: [ "/bin/sh",
