--- a/manifests/updates/devtron-external-secret-override.yaml
+++ b/manifests/updates/devtron-external-secret-override.yaml
@@ -14,19 +14,19 @@ data:
         template:
           spec:
             containers:
-              resources:
+            - resources:
                 limits:
-                  cpu: 260m
-                  memory: 128Mi
+                  cpu: 60m
+                  memory: 50Mi
                 requests:
-                  cpu: 200m
-                  memory: 128Mi
-              env:
-              - name: "LOG_LEVEL"
-                value: "info"
-              - name: "LOG_MESSAGE_KEY"
-                value: "msg"
-              - name: "METRICS_PORT"
-                value: "3001"
-              - name: "POLLER_INTERVAL_MILLISECONDS"
-                value: "10000"
+                  cpu: 10m
+                  memory: 10Mi
+#              env:
+#              - name: "LOG_LEVEL"
+#                value: "info"
+#              - name: "LOG_MESSAGE_KEY"
+#                value: "msg"
+#              - name: "METRICS_PORT"
+#                value: "3001"
+#              - name: "POLLER_INTERVAL_MILLISECONDS"
+#                value: "10000"
