--- a/manifests/updates/devtron-clair-override.yaml
+++ b/manifests/updates/devtron-clair-override.yaml
@@ -16,18 +16,15 @@ data:
           spec:
             containers:
             - resources:
-                limits:
-                  cpu: 50m
-                  memory: 110Mi
                 requests:
-                  cpu: 10m
+                  cpu: 40m
                   memory: 50Mi
     ---
     apiVersion: v1
     kind: Secret
     metadata:
       name: clair
-    update:
-      data:
-        config.yaml: |-
-          replace-me with key/secret 
+#    update:
+#      data:
+#        config.yaml: |-
+#          replace-me with key/secret 
