--- a/manifests/updates/devtron-gitsensor-override.yaml
+++ b/manifests/updates/devtron-gitsensor-override.yaml
@@ -9,10 +9,10 @@ data:
     kind: ConfigMap
     metadata:
       name: git-sensor-cm
-    update:
-      data:
-        PG_ADDR: postgresql-postgresql.devtroncd
-        PG_USER: change-me
+#    update:
+#      data:
+#        PG_ADDR: postgresql-postgresql.devtroncd
+#        PG_USER: change-me
     ---
     apiVersion: apps/v1
     kind: StatefulSet
@@ -23,15 +23,12 @@ data:
         template:
           spec:
             containers:
-              resources:
-                limits:
-                  cpu: 50m
-                  memory: 220Mi
+            - resources:
                 requests:
-                  cpu: 20m
+                  cpu: 15m
                   memory: 100Mi
         volumeClaimTemplates:
-          spec:
+        - spec:
             resources:
               requests:
                 storage: 2Gi
