--- a/manifests/updates/devtron-ingress-override.yaml
+++ b/manifests/updates/devtron-ingress-override.yaml
@@ -9,13 +9,11 @@ data:
     kind: Ingress
     metadata: 
       name: devtron-ingress
-      annotations:
-        name: change-me
-    update:
-      metadata:
-        annotations:
-          owner: prashant
-      spec:
-        rules:
-        - http:
-            host: http://change-me
+#    update:
+#      metadata:
+#        annotations:
+#          owner: app1
+#      spec:
+#        rules:
+#        - http:
+#            host: http://change-me
