--- a/manifests/updates/devtron-kubewatch-override.yaml
+++ b/manifests/updates/devtron-kubewatch-override.yaml
@@ -14,19 +14,10 @@ data:
         template:
           spec:
             containers:
-              env:
-              - name: devtroncd_NAMESPACE
-                value: "devtron-ci"
-              - name: CI_INFORMER
-                value: "true"
-              - name: ACD_NAMESPACE
-                value: devtroncd
-              - name: ACD_INFORMER
-                value: "true"
-              resources:
+            - resources:
                 requests:
+                  cpu: 5m
+                  memory: 18Mi
+                limits:
                   cpu: 10m
                   memory: 20Mi
-                limits:
-                  cpu: 1m
-                  memory: 5Mi
