--- a/manifests/updates/devtron-lens-override.yaml
+++ b/manifests/updates/devtron-lens-override.yaml
@@ -9,14 +9,10 @@ data:
     kind: ConfigMap
     metadata:
       name: lens-cm
-    update:
-      date:
-        GIT_SENSOR_URL: http://git-sensor-service.devtroncd:80
-        NATS_SERVER_HOST: nats://devtron-nats.devtroncd:4222
-        PG_ADDR: postgresql-postgresql.devtroncd
-        PG_PORT: "5432"
-        PG_USER: postgres
-        PG_DATABASE: lens
+#    update:
+#      data:
+#        GIT_SENSOR_URL: http://git-sensor-service.devtroncd:80
+#        NATS_SERVER_HOST: nats://devtron-nats.devtroncd:4222
     ---
     apiVersion: apps/v1
     kind: Deployment
@@ -27,19 +23,10 @@ data:
         template:
           spec:
             containers:
-              env:
-              - name: CONFIG_HASH
-                value: 1b9a3decafa1e6653dbe094dc6214c1caff4f2185f1a533d5dc566cd5bdebc2a
-              - name: SECRET_HASH
-                value: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
-              - name: POD_NAME
-                valueFrom:
-                  fieldRef:
-                    fieldPath: metadata.name
-              resources:
+            - resources:
                 limits:
-                  cpu: 200m
+                  cpu: 10m
                   memory: 20Mi
                 requests:
-                  cpu: 50m
-                  memory: 10Mi
+                  cpu: 5m
+                  memory: 5Mi
