--- a/manifests/updates/devtron-minio-override.yaml
+++ b/manifests/updates/devtron-minio-override.yaml
@@ -9,10 +9,10 @@ data:
     kind: Secret
     metadata:
       name: devtron-minio
-    update:
-      data:
-        accesskey: ""
-        secretkey: ""
+#    update:
+#      data:
+#        accesskey: ""
+#        secretkey: ""
     ---
     apiVersion: apps/v1
     kind: Deployment
@@ -24,17 +24,6 @@ data:
         template:
           spec:
             containers:
-              env:
-              - name: MINIO_ACCESS_KEY
-                valueFrom:
-                  secretKeyRef:
-                    name: devtron-minio
-                    key: accesskey
-              - name: MINIO_SECRET_KEY
-                valueFrom:
-                  secretKeyRef:
-                    name: devtron-minio
-                    key: secretkey
-              resources:
+            - resources:
                 requests:
-                  memory: 1Gi
+                  memory: 100Mi
