--- a/manifests/updates/devtron-minio-storage-override.yaml
+++ b/manifests/updates/devtron-minio-storage-override.yaml
@@ -9,10 +9,10 @@ data:
     kind: Secret
     metadata:
       name: devtron-minio
-    update:
-      data:
-        accesskey: ""
-        secretkey: ""
+#    update:
+#      data:
+#        accesskey: ""
+#        secretkey: ""
     ---
     apiVersion: apps/v1
     kind: StatefulSet
@@ -20,37 +20,25 @@ data:
       name: devtron-minio
     update:
       spec:
-        replicas: 4
         template:
           spec:
             containers:
-              env:
-              - name: MINIO_ACCESS_KEY
-                valueFrom:
-                  secretKeyRef:
-                    name: devtron-minio
-                    key: accesskey
-              - name: MINIO_SECRET_KEY
-                valueFrom:
-                  secretKeyRef:
-                    name: devtron-minio
-                    key: secretkey
-              resources:
+            - resources:
                 requests:
-                  memory: 1Gi
+                  memory: 100Mi
     ---
     apiVersion: batch/v1
     kind: Job
     metadata:
       name: devtron-minio-make-bucket-job
-    update:
-      spec:
-        template:
-          spec:
-            containers:
-              resources:
-                requests:
-                  memory: 128Mi
+#    update:
+#      spec:
+#        template:
+#          spec:
+#            containers:
+#              resources:
+#                requests:
+#                  memory: 128Mi
 
 
 
