--- a/manifests/updates/devtron-nats-operator-override.yaml
+++ b/manifests/updates/devtron-nats-operator-override.yaml
@@ -11,26 +11,13 @@ data:
       name: nats-operator
     update:
       spec:
-        replicas: 1
         template:
           spec:
             containers:
-              ports:
-              - name: readyz
-                containerPort: 8080
-              env:
-              - name: MY_POD_NAMESPACE
-                valueFrom:
-                  fieldRef:
-                    fieldPath: metadata.namespace
-              - name: MY_POD_NAME
-                valueFrom:
-                  fieldRef:
-                    fieldPath: metadata.name
-              resources:
+            - resources:
                 limits:
                   cpu: 5m
                   memory: 20Mi
                 requests:
-                  cpu: 1m
+                  cpu: 3m
                   memory: 10Mi
