--- a/manifests/updates/devtron-override-cm.yaml
+++ b/manifests/updates/devtron-override-cm.yaml
@@ -21,13 +21,13 @@ data:
         CD_LIMIT_CI_CPU: "0.5"
         CD_LIMIT_CI_MEM: "3G"
         CD_REQ_CI_CPU: "0.5"
-        CD_REQ_CI_MEM: "3G"
+        CD_REQ_CI_MEM: "500M"
         LIMIT_CI_CPU: "0.5"
         LIMIT_CI_MEM: "3G"
         REQ_CI_CPU: "0.5"
-        REQ_CI_MEM: "3G"
-        CD_NODE_TAINTS_KEY: "prashant"
-        CD_NODE_TAINTS_VALUE: "prashant"
+        REQ_CI_MEM: "500M"
+        CD_NODE_TAINTS_KEY: ""
+        CD_NODE_TAINTS_VALUE: ""
         CI_NODE_TAINTS_KEY: ""
         CI_NODE_TAINTS_VALUE: ""
         CI_NODE_LABEL_SELECTOR: ""
