spec added for create api and app listing and refactored app labels spec

--- a/specs/application.yaml
+++ b/specs/application.yaml
@@ -1,18 +1,7 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Swagger Petstore
-  description: A sample API that uses a petstore as an example to demonstrate features in the OpenAPI 3.0 specification
-  termsOfService: http://swagger.io/terms/
-  contact:
-    name: Swagger API Team
-    email: apiteam@swagger.io
-    url: http://swagger.io
-  license:
-    name: Apache 2.0
-    url: https://www.apache.org/licenses/LICENSE-2.0.html
-servers:
-  - url: http://petstore.swagger.io/api
+  title: Devtron Labs
 paths:
   /orchestrator/app:
     post:
@@ -48,7 +37,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorReponse'
+                $ref: '#/components/schemas/ErrorResponse'
 
   /orchestrator/app/list:
     post:
@@ -95,7 +84,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorReponse'
+                $ref: '#/components/schemas/ErrorResponse'
 
 
 # components mentioned below
@@ -194,7 +183,7 @@ components:
           type: integer
           description: app name
         deleted:
-          type: bool
+          type: boolean
           description: app name
         environmentId:
           type: integer
@@ -232,7 +221,7 @@ components:
           items:
             type: string
 
-    ErrorReponse:
+    ErrorResponse:
       required:
         - code
         - status
